--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -153,7 +153,7 @@
     transition: top var(--desktop-transition);
 
     &.shiftToTop {
-      top: -40px;
+      top: -30px;
 
       .logo {
         img {
