--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -27,7 +27,7 @@
   --spacer-xxxxl: 72px;
 
   // Sizing
-  --header-height: 170px;
+  --header-height: 140px;
 
   // Fonts - body
   --primary-font: "Cormorant", serif;
